# SYN-OS

./: .gitignore  BUILD-ARCHISO.zsh  DIR.txt  GRAPH.sh  LICENSE  README.md  READMEold.md  deptree.tree  ls.txt  packages.dot  readme copy.md  readme.md  syn-stage0.sh  syn-stage1.sh
Graphviz/: history-config-location.dot  history-partition-dispatch.dot  history-scope-growth.dot  history-session-start.dot  history-shell-env.dot  packages-logic.dot  packages-map.dot  syn-os.dot
Older versions/SYN-OS-2035/SYN-DOTFILES/.oh-my-zsh/: README.md
Older versions/SYN-OS-2035/SYN-INSTALLER-SCRIPTS/: SYN-INSTALLER-MAIN.sh  motd-primer.sh  motd.sh  syn-1_chroot.sh  syn-disk-variables.sh
Older versions/SYN-OS-2035/SYN-ISO-PROFILE/: pacman.conf
Older versions/SYN-OS-2035/SYN-ROOTOVERLAY/etc/: os-release
Older versions/SYN-OS-2035/SYN-TOOLS/: Pacman-Tree.sh  SYN-BUILDER.zsh
Older versions/SYN-OS-V3 or Earlier/SYN-RTOS-OLD/: packages.x86_64  profiledef.sh
Older versions/SYN-OS-V4/SYN-INSTALLER-SCRIPTS/: SYN-INSTALLER-MAIN.sh  motd-primer.sh  syn-disk-variables.sh
Older versions/SYN-OS-V4/SYN-TOOLS/: RelationshipGen.sh  SYN-GRAPH-FILES.sh  SYN-GRAPH-LARGE.sh  equip-profile-with-repo.sh
SYN-ISO-PROFILE/: packages.x86_64  profiledef.sh
SYN-ISO-PROFILE/airootfs/etc/: motd  os-release
SYN-ISO-PROFILE/airootfs/etc/zsh/: zshrc
SYN-ISO-PROFILE/grub/: grub.cfg
SYN-ISO-PROFILE/syslinux/: syslinux.cfg
SYN-OS/: .gitignore  BUILD-SYNOS-ISO.zsh  SYN-REDSHIRT.ZSH
SYN-OS-2035/: dog.dog  readme.MD
SYN-OS-2035/SYN-DOTFILES/: .zshrc
SYN-OS-2035/SYN-INSTALLER-SCRIPTS/: .SYN-INSTALLER-MAIN.sh.kate-swp  .motd.sh.kate-swp  .syn-1_chroot.sh.kate-swp  .syn-disk-variables.sh.kate-swp  .syn-installer-functions.sh.kate-swp  SYN-INSTALLER-MAIN-encrypted.sh  SYN-INSTALLER-MAIN.sh  motd-primer.sh  motd.sh  syn-1_chroot-encrypted.sh  syn-1_chroot.sh  syn-installer-functions.sh  syn-pacstrap-variables.sh
SYN-OS-2035/SYN-ISO-PROFILE/: pacman.conf  profiledef.sh
SYN-OS-2035/SYN-ISO-PROFILE/airootfs/etc/: motd  pacman.conf
SYN-OS-2035/SYN-ROOTOVERLAY/etc/: issue
SYN-OS-2035/SYN-TOOLS/: REBUILD_ISO.sh  SYN-BUILDER.zsh  SYN-CHRONS.sh  equip-profile-with-repo.sh
SYN-OS-V3 or Earlier/SYN-RTOS-OLD/airootfs/etc/: hostname
SYN-OS-V3 or Earlier/SYN-RTOS-OLD/airootfs/root/: syn-install.sh
SYN-OS-V4/: REBUILD_ISO.sh  SYN-DIRDRAW.dot  SYN-INSTALLER-MAIN.sh  ShowInterfaceAddrLoop.sh  equip-profile-with-repo.sh
SYN-OS-V4/SYN-INSTALLER-SCRIPTS/: SYN-INSTALLER-MAIN.sh  motd-primer.sh  syn-ascii-art.sh  syn-installer-functions.sh  syn-pacstrap-variables.sh
SYN-OS-V4/SYN-ISO-PROFILE/: profiledef.sh
SYN-OS-V4/SYN-ROOTOVERLAY/etc/: os-release
SYN-OS-V4/SYN-TOOLS/: GRAPH.sh  REBUILD_ISO.sh  SYN-DIR-GRAPH.sh  SYN-GRAPH-FILES.sh  SYN-GRAPH-LARGE.sh  SYN-GRAPH.sh  equip-profile-with-repo.sh
SYN-OS/Graphviz/: syn-os.dot  syn-stage1.dot
SYN-OS/SYN-ISO-PROFILE/: packages.x86_64  pacman.conf  profiledef.sh
SYN-OS/SYN-ISO-PROFILE/airootfs/etc/: motd  nanorc  os-release  pacman.conf  vconsole.conf
SYN-OS/SYN-ISO-PROFILE/airootfs/root/: .zshrc  password  syn-stage0.zsh
SYN-OS/SYN-ISO-PROFILE/airootfs/usr/lib/syn-os/syn-bar-vpn-src/: CMakeLists.txt  PKGBUILD
SYN-OS/SYN-ISO-PROFILE/airootfs/usr/lib/syn-os/syn-bar-vpn-src/src/: main.c
SYN-OS/SYN-ISO-PROFILE/airootfs/usr/lib/syn-os/syn-crypter-src/: CMakeLists.txt  PKGBUILD
SYN-OS/SYN-ISO-PROFILE/airootfs/usr/lib/syn-os/syn-crypter-src/src/: main.c  syn_crypt_blowfish.c  syn_crypt_redshirt.c  syn_crypt_rsa.c  syn_crypt_util.c  syn_theme.c  syn_theme.h  syn_tui.h
SYN-OS/SYN-ISO-PROFILE/airootfs/usr/lib/syn-os/syn-filemanager-src/: CMakeLists.txt
SYN-OS/SYN-ISO-PROFILE/airootfs/usr/lib/syn-os/syn-filemanager-src/resources/: syn-filemanager.desktop
SYN-OS/SYN-ISO-PROFILE/airootfs/usr/lib/syn-os/syn-filemanager-src/src/: MainWindow.cpp  main.cpp
SYN-OS/SYN-ISO-PROFILE/efiboot/loader/: loader.conf
SYN-OS/SYN-ISO-PROFILE/grub/: grub.cfg
SYN-OS/SYN-ISO-PROFILE/syslinux/: archiso_head.cfg  archiso_sys-linux.cfg  syslinux-linux.cfg  syslinux.cfg
SYN-OS/SYN-ISO-PROFILE/tools/: gen-wallpapers.py
SYN-OS/SYN-OS/Graphviz/: syn-stage0.dot
SYN-SOFTWARE/syn-audio-src/: CMakeLists.txt
SYN-SOFTWARE/syn-audio-src/src/: main.c  syn_audio_tui.c  syn_audio_tui.h  syn_pulse.c  syn_pulse.h
SYN-SOFTWARE/syn-bar-disk-src/: CMakeLists.txt
SYN-SOFTWARE/syn-bar-window-title-src/: CMakeLists.txt
SYN-SOFTWARE/syn-crypter-src/src/: syn_crypt.h  syn_crypt_aes.c  syn_theme.c  syn_theme.h  syn_tui.c
SYN-SOFTWARE/syn-filemanager-src/: PKGBUILD
SYN-SOFTWARE/syn-filemanager-src/src/: FileOps.cpp  FileOps.h  MainWindow.h
SYN-SOFTWARE/syn-sysmon-src/: CMakeLists.txt  PKGBUILD
SYN-SOFTWARE/syn-sysmon-src/src/: main.c  syn_journal.c  syn_journal.h  syn_stats.c  syn_stats.h  syn_sysmon_tui.c  syn_sysmon_tui.h
SYN-SOFTWARE/syn-wifi-src/: CMakeLists.txt  PKGBUILD
SYN-SOFTWARE/syn-wifi-src/src/: main.c  syn_iwd.c  syn_iwd.h  syn_wifi_tui.c  syn_wifi_tui.h
docs/: building-the-iso.md  dotfile-overlay.md  history.md  installer-overview.md  labwc.md  packages.md  stage0.md  stage1.md  storage-strategies.md  synos-conf.md  waybar.md  wayland.md  zsh.md
docs/concepts/: arch-linux.md  filesystem.md  shell.md  wayland.md  window-manager.md
dotfiles/: .Xauthority  .fehbg  .gitconfig  .xinitrc
dotfiles/.config/: QtProject.conf  kconf_updaterc  kdeglobals  kdenliverc  kwritemetainfos  kwriterc  spectaclerc
dotfiles/.config/dconf/: user
dotfiles/.config/kitty/: kitty.conf
dotfiles/.config/pavucontrol-qt/: pavucontrol-qt.conf
dotfiles/.config/pulse/: e1e2c38b946b467b9852104705f8ea18-card-database.tdb  e1e2c38b946b467b9852104705f8ea18-device-volumes.tdb  e1e2c38b946b467b9852104705f8ea18-stream-volumes.tdb
dotfiles/.config/qt5ct/: qt5ct.conf
dotfiles/.config/vlc/: vlc-qt-interface.conf  vlcrc
dotfiles/.local/share/: recently-used.xbel  user-places.xbel  user-places.xbel.bak
dotfiles/.local/share/iwctl/: history
dotfiles/.oh-my-zsh/cache/: .zsh-update
dotfiles/.pki/nssdb/: cert9.db  key4.db  pkcs11.txt
dotfiles/.xdg_menu_cache/: inputs  output
(+380 files in other folders)
